@@ -1681,7 +1681,11 @@ class CPSFileWidget(CPSWidget):
          'label': 'Maximum file size'},
         {'id': 'display_external_editor', 'type': 'boolean', 'mode': 'w',
          'label': 'Display link to external editor in edit mode'},
+        {'id': 'ascii_filename', 'type': 'boolean', 'mode': 'w',
+         'label': 'Convert file name to ascii'},
         )
+
+    ascii_filename = True
     size_max = 4*1024*1024
     display_external_editor = True
 
@@ -1716,6 +1720,9 @@ class CPSFileWidget(CPSWidget):
         fileupload.seek(current)
         return size
 
+    def cleanFileName(self, name):
+        return generateFileName(name, ascii=self.ascii_filename)
+
     def getFileInfo(self, datastructure):
         """Get the file info from the datastructure."""
         widget_id = self.getWidgetId()
@@ -1725,7 +1732,7 @@ class CPSFileWidget(CPSWidget):
         if fileupload:
             empty_file = False
             session_file = isinstance(fileupload, PersistableFileUpload)
-            current_filename = cleanFileName(fileupload.filename)
+            current_filename = self.cleanFileName(fileupload.filename)
             size = self.getFileSize(fileupload)
             file = dm[field_id] # last stored file
             if file is not None:
@@ -1793,7 +1800,7 @@ class CPSFileWidget(CPSWidget):
         if choice == 'change' and filename == old_filename:
             # if upload with input field unchanged, use fileupload filename
             filename = cookId('', '', fileupload)[0].strip()
-        filename = cleanFileName(filename or 'file.bin')
+        filename = self.cleanFileName(filename or 'file.bin')
         return filename
 
     def checkFileName(self, filename, mimetype):
